# corrector

./: .gitignore  README.md  app.py  desktop.ini  pyproject.toml  render.yaml  requirements.txt  va.bat
.streamlit/: secrets.toml
app/: main.py
app/services/: correction_service.py  transcription_service.py
templates/: about.html  base.html  index.html
templates/partials/: correction_results.html
