[project]
name = "Corrector"
version = "0.1.0"
description = "Proyecto FastAPI"
authors = [
  { name = "Juan Francisco Briva", email = "juanfranbrv@gmail.com" }
]

requires-python = ">=3.8"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app"]



