[project]
name = "Corrector"
version = "0.1.0"
description = "Proyecto FastAPI"
authors = [
  { name = "Juan Francisco Briva", email = "juanfranbrv@gmail.com" }
]

requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "langchain>=0.2.17",
    "langchain-openai>=0.1.25",
    "langchain-google-genai>=2.1.4",
    "langchain-groq>=0.3.2",
    "langchain-together>=0.3.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app"]
